--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 
 NEXT_PUBLIC_GOOGLE_MAP_KEY=AIzaSyCHZCBLcVJf2NqZYsd37TzUxqzVcDI-2JU
 NEXT_PUBLIC_BASE_URL=https://unilaos.com
-NEXT_CLIENT_HOST_URL=https://app.bento.mobi
+NEXT_CLIENT_HOST_URL=https://bentodeliveryreact.vercel.app
 NEXT_PUBLIC_SITE_VERSION= 2.6
