--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-image-magnifiers": "^1.4.0",
     "react-image-magnify": "^2.7.4",
     "react-intersection-observer": "^9.8.1",
+    "react-otp-input": "^3.1.1",
     "react-phone-input-2": "^2.15.1",
     "react-player": "^2.16.0",
     "react-query": "^3.39.2",
