--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_GOOGLE_MAP_KEY=AIzaSyCHZCBLcVJf2NqZYsd37TzUxqzVcDI-2JU
+NEXT_PUBLIC_GOOGLE_MAP_KEY=AIzaSyASEynrBVU8QiI6x5BUNnLSxLmi2ER_tb4
 NEXT_PUBLIC_BASE_URL=https://admin.bentodelivery.net
-NEXT_CLIENT_HOST_URL=https://bentodeliveryreact.vercel.app
-NEXT_PUBLIC_SITE_VERSION= 2.7.1
+NEXT_CLIENT_HOST_URL=https://bentodelivery.net
+NEXT_PUBLIC_SITE_VERSION= 2.11.1
