--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_GOOGLE_MAP_KEY=AIzaSyASEynrBVU8QiI6x5BUNnLSxLmi2ER_tb4
 NEXT_PUBLIC_BASE_URL=https://am.bentolao.com
-NEXT_CLIENT_HOST_URL=https://bentolao.com
+NEXT_CLIENT_HOST_URL=https://web.bentolao.com
 NEXT_PUBLIC_SITE_VERSION= 2.12
